...
        android:typeface="serif"
        android:textSize="24sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewLoginTitle"
        android:hint="@string/username_hint"
        android:maxLines="1"
        android:layout_marginTop="30dp"
        android:maxLength="25"
        android:inputType="text|textNoSuggestions"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:layout_below="@id/editTextUsername"
        android:layout_marginTop="30dp"
...
        android:text="@string/forgot_password"
        android:textColor="@color/dark_green"
        android:textSize="14sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_below="@id/textViewForgotPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>
...
