...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </TextView>

    <ImageView
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_user"
        android:contentDescription="@string/logout"
        android:padding="20dp"
        android:clickable="true"
...

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/line1"
        android:background="@color/dark_grey"
        app:layout_constraintBottom_toTopOf="@+id/search_add_container"
        app:layout_constraintTop_toBottomOf="@+id/app_header">
    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginHorizontal="10dp"
...
                android:hint="@string/search_hint"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:background="@android:color/transparent"/>
        </LinearLayout>
        <Button
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:text="@string/add_item"
            android:paddingVertical="7dp"
...
