...
            <RelativeLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/barcode_scan_icon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/barcode_scan_icon"
                    android:contentDescription="scan barcode button"
...
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:padding="14dp">
                <androidx.cardview.widget.CardView
                    android:id="@+id/open_gallery_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:clickable="true"
                    app:cardBackgroundColor="@color/dark_green"
...
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:paddingStart="8dp"
                    android:background="@drawable/rounded_border">
                    <EditText
                        android:id="@+id/serial_number_field"
                        android:layout_width="0dp"
                        android:layout_weight="3"
                        android:layout_height="45dp"
                        android:hint="e.g. 1234RTL0916010001"
                        android:textSize="16sp"
                        android:inputType="textNoSuggestions"
                        android:maxLines="1"
                        android:maxLength="60"
                        android:background="@android:color/transparent"/>

                    <ImageView
                        android:id="@+id/open_sn_scanner_button"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="25dp"
                        android:layout_marginTop="8dp"
                        android:src="@drawable/open_camera_icon"
                        android:contentDescription="camera icon"
...
